syntax = "proto3";

package tester;

option java_package = "com.example.protobufserver.proto.aikibo";
option java_outer_classname = "Training";

import "google/protobuf/wrappers.proto";

service CourseServiceTwo {
  rpc getCourseById(google.protobuf.Int32Value) returns (CourseTwo) {}
}

message CourseTwo {
  int32 id = 1;
  string course_name = 2;
  repeated StudentTwo student = 3;
}

message StudentTwo {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  repeated PhoneNumber phone = 5;
  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }
  enum PhoneType {
    MOBILE = 0;
    LANDLINE = 1;
  }
}